# NebulaChat

./: .gitignore  Cargo.toml  LICENSE  README.md
nebula-app/: Cargo.toml
nebula-app/src/: main.rs
nebula-app/src/ui/components/: leftbar_server_list.rs  mod.rs  topbar_header.rs
nebula-cli/: Cargo.toml
nebula-cli/src/: app.rs  main.rs
nebula-cli/src/app/: mod.rs
nebula-cli/src/app/panes/: center.rs
nebula-cli/src/app/widgets/: chat_list_sidebar.rs  connected_users_sidebar.rs  input.rs  main_chat.rs  mod.rs
nebula-cli/src/cli/: mod.rs
nebula-cli/src/cli/command/: auth.rs  initialize.rs  mod.rs
nebula-common/: Cargo.toml
nebula-common/src/: error.rs  lib.rs
nebula-common/src/config/: client.rs
nebula-common/src/net/: arti.rs  event.rs  mod.rs
nebula-common/src/net/bonk/: client.rs  frame.rs  message.rs  mod.rs  peer.rs
nebula-common/src/net/relay/: mod.rs
nebula-common/src/net/relay/server/: mod.rs
nebula-relay/: Cargo.toml
