[workspace]
resolver = "3"
members = ["nebula-app", "nebula-cli", "nebula-common", "nebula-relay"]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Peer-to-peer secure chat"
readme = "README.md"
repository = "https://github.com/LS-Consult/NebulaChat"
homepage = "https://github.com/LS-Consult/NebulaChat"
documentation = "https://github.com/LS-Consult/NebulaChat"
authors = ["Lucas Morais Gurgel <lucas.morais@lsconsult.tech>", "Chaybe Lucas <chaybe_lucas@hotmail.com>"]
publish = true
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }

egui = { version = "0.31.1", features = ["serde"] }
eframe = { version = "0.31.1", features = ["serde", "wgpu"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm", "serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
clap = { version = "4.5.35", features = ["derive"] }

axum = { version = "0.8.3", features = ["ws"] }
arti-client = { version = "0.29.0", features = ["full"] }
tor-rtcompat = { version = "0.29.0", features = ["full"] }

opus = { version = "0.3.0" }

ed25519-dalek = { version = "2.1.1", features = ["serde", "pem", "batch", "digest"] }
x25519-dalek = { version = "2.0.1", features = ["serde"] }
blake3 = { version = "1.8.1", features = ["serde", "traits-preview"] }
sha2 = { version = "0.10.8" }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
hkdf = { version = "0.12.4" }

ulid = { version = "1.2.1", features = ["serde", "uuid"] }
chrono = { version = "0.4.40", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["indexmap", "preserve_order"] }
ciborium = { version = "0.2.2" }
toml = { version = "0.8.20", features = ["indexmap", "preserve_order"] }
dirs = { version = "6.0.0" }

thiserror = { version = "2.0.12" }
color-eyre = { version = "0.6.3" }