[package]
name = "nebula-app"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
env_logger = "0.11.8"