[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nebula-common = { path = "../nebula-common" }

tokio = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }

thiserror = { workspace = true }
color-eyre = { workspace = true }