[package]
name = "nebula-common"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
