[package]
name = "nebula-relay"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nebula-common = { path = "../nebula-common" }

tokio = { workspace = true }

ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }

ulid = { workspace = true }

serde = { workspace = true }
ciborium = { workspace = true }